rename controllers Cruds by Maintenances

--- a/SchoolExpress.WebService/SchoolExpress.WebService.csproj
+++ b/SchoolExpress.WebService/SchoolExpress.WebService.csproj
@@ -224,18 +224,18 @@
     <Compile Include="Configurations\UserAccountConfiguration.cs" />
     <Compile Include="Configurations\UserConfiguration.cs" />
     <Compile Include="Configurations\UserRoleConfiguration.cs" />
-    <Compile Include="Controllers\Api\Cruds\CampusesCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\CareerDetailsCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\CareersCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\DegreesCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\ModulesCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\PeriodsCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\RolesCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\SpeakersCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\StudentsCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\UserAccountsCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\UserRolesCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\UsersCrudApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\CampusesMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\CareerDetailsMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\CareersMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\DegreesMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\ModulesMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\PeriodsMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\RolesMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\SpeakersMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\StudentsMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\UserAccountsMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\UserRolesMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\UsersMaintenanceApiController.cs" />
     <Compile Include="Controllers\Api\Reports\SpeakerCareerSchedulesReportApiController.cs" />
     <Compile Include="Controllers\Api\Reports\GenericReportApiController.cs" />
     <Compile Include="Controllers\Api\Reports\StudentEnrollmentDetailsReportApiController.cs" />
@@ -337,15 +337,15 @@
     <Compile Include="Filters\JwtAuthorizeAttribute.cs" />
     <Compile Include="Controllers\Api\AccountApiController.cs" />
     <Compile Include="Controllers\Api\BaseApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\CrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\ClassRoomsCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\CoursesCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\EnrollmentDetailsCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\EnrollmentsCrudApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\MaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\ClassRoomsMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\CoursesMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\EnrollmentDetailsMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\EnrollmentsMaintenanceApiController.cs" />
     <Compile Include="Controllers\Api\JwtController.cs" />
-    <Compile Include="Controllers\Api\Cruds\PeopleCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\CareerScheduleDetailsCrudApiController.cs" />
-    <Compile Include="Controllers\Api\Cruds\CareerSchedulesCrudApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\PeopleMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\CareerScheduleDetailsMaintenanceApiController.cs" />
+    <Compile Include="Controllers\Api\Maintenances\CareerSchedulesMaintenanceApiController.cs" />
     <Compile Include="Models\UserLoginModel.cs" />
     <Compile Include="Providers\CustomContentTypeProvider.cs" />
     <Compile Include="Providers\CustomDirectRouteProvider.cs" />
